# cuda_gemv_benchmark

./: CMakeLists.txt  README.md  build.sh
benchmarks/: CMakeLists.txt
benchmarks/MatrixMulCUDA0/: naive.cc  naive.cu  naive.cuh
benchmarks/MatrixMulCUDA1/: fastgemv.cc  fastgemv.cu  fastgemv.cuh
benchmarks/MatrixMulCUDA2/: quantgemv.cc  quantgemv.cu  quantgemv.cuh
benchmarks/MatrixMulCUDA3/: fastgemv_inst.cc  fastgemv_inst.cu  fastgemv_inst.cuh
benchmarks/MatrixMulCUDA4/: cublas.cc
benchmarks/bm_base/: CMakeLists.txt  basegemv.cc  basegemv.h
benchmarks/bm_lib/: CMakeLists.txt  basegemv.cc  basegemv.cpp  basegemv.h  quant.cc  quant.h  tensor.cc  tensor.h  utils.cu  utils.h
